--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,16 @@
 .state-county {
     width: 50%;
 }
+nav, a:not(#logo), .navelement {
+    background-color: #a02727;
+    border-top: 5px solid #a02727;
+    border-bottom: 5px solid #a02727;
+}
+.navelement:hover {
+    background-color: #dd1919;
+    border-top: 5px solid #dd1919;
+    border-bottom: 5px solid #dd1919;
+}
 .search {
     /* border-radius: 100%; */
     height: 90%;
